# wasm_component_layer

./: Cargo.toml
component_macro/: Cargo.toml  README.md
component_macro/src/: bindgen.rs  component.rs
component_macro/tests/: codegen.rs
src/: conv.rs  lib.rs
src/conv/: primitive_impls.rs
wit-bindgen/: Cargo.toml  README.md
wit-bindgen/src/: lib.rs  rust.rs
