[package]
name = "wasm_component_layer_macro"
version.workspace = true
authors.workspace = true
description = "Macros for deriving component interface types from Rust types"
license = "Apache-2.0 WITH LLVM-exception"
repository = "https://github.com/DouglasDwyer/wasm_component_layer"
documentation = "https://docs.rs/wasm-component-layer-macro/"
categories = ["wasm"]
keywords = ["webassembly", "wasm"]
readme= "README.md"
edition.workspace = true

[lib]
proc-macro = true
test = false
doctest = false

[dependencies]
anyhow = "1.0"
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "2.0", features = ["extra-traits"] }
wasmtime-component-util = "15.0"
wasmtime-wit-bindgen = "15.0"
wit-parser = { version = "0.13" }

[dev-dependencies]
# wasmtime = { path = '../wasmtime', features = ['component-model'] }
# component-macro-test-helpers = { path = 'test-helpers' }
# tracing = { workspace = true }

[features]
async = []
