[package]
name = "wasmtime-wit-bindgen"
version.workspace = true
authors.workspace = true
description = "Internal `*.wit` support for the `wasmtime` crate's macros"
license = "Apache-2.0 WITH LLVM-exception"
repository = "https://github.com/bytecodealliance/wasmtime"
documentation = "https://docs.rs/wasmtime-wit-bindgen/"
edition.workspace = true

[dependencies]
anyhow = "1.0"
heck = "0.4"
wit-parser = "0.13"
indexmap = "2.1"
